exports[`no-mock-timers-destructured-import > invalid(1): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable(); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | mock.timers.enable();

`;

exports[`no-mock-timers-destructured-import > invalid(1): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable(); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable();

`;

exports[`no-mock-timers-destructured-import > invalid(10): import {test, mock} from 'node:test';\nimport {setInterval} from 'timers';\nmock.timers.enable({apis: [\"setInterval\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setInterval} from 'timers';
  3 | mock.timers.enable({apis: ["setInterval"]});

`;

exports[`no-mock-timers-destructured-import > invalid(10): import {test, mock} from 'node:test';\nimport {setInterval} from 'timers';\nmock.timers.enable({apis: [\"setInterval\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setInterval} from 'timers';
    |         ^^^^^^^^^^^ \`setInterval\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setInterval\` instead.
  3 | mock.timers.enable({apis: ["setInterval"]});

`;

exports[`no-mock-timers-destructured-import > invalid(11): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", t => { t.mock.timers.enable({apis: [\"setTimeout\"]}); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test("a", t => { t.mock.timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(11): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", t => { t.mock.timers.enable({apis: [\"setTimeout\"]}); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test("a", t => { t.mock.timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(12): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", (t: any) => { (t as any).mock.timers.enable({apis: [\"setTimeout\"]}); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test("a", (t: any) => { (t as any).mock.timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(12): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", (t: any) => { (t as any).mock.timers.enable({apis: [\"setTimeout\"]}); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test("a", (t: any) => { (t as any).mock.timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(13): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", t => { t!.mock.timers.enable({apis: [\"setTimeout\"]}); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test("a", t => { t!.mock.timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(13): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", t => { t!.mock.timers.enable({apis: [\"setTimeout\"]}); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test("a", t => { t!.mock.timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(14): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", t => { (t.mock satisfies any).timers.enable({apis: [\"setTimeout\"]}); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test("a", t => { (t.mock satisfies any).timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(14): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", t => { (t.mock satisfies any).timers.enable({apis: [\"setTimeout\"]}); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test("a", t => { (t.mock satisfies any).timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(15): import * as nodeTest from 'node:test';\nimport {setTimeout} from 'node:timers';\nnodeTest.mock.timers.enable(); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | nodeTest.mock.timers.enable();

`;

exports[`no-mock-timers-destructured-import > invalid(15): import * as nodeTest from 'node:test';\nimport {setTimeout} from 'node:timers';\nnodeTest.mock.timers.enable(); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | nodeTest.mock.timers.enable();

`;

exports[`no-mock-timers-destructured-import > invalid(16): import {test, mock} from 'node:test';\nimport {setImmediate} from 'node:timers';\nmock.timers.enable({apis: [\"setImmediate\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setImmediate} from 'node:timers';
  3 | mock.timers.enable({apis: ["setImmediate"]});

`;

exports[`no-mock-timers-destructured-import > invalid(16): import {test, mock} from 'node:test';\nimport {setImmediate} from 'node:timers';\nmock.timers.enable({apis: [\"setImmediate\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setImmediate} from 'node:timers';
    |         ^^^^^^^^^^^^ \`setImmediate\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setImmediate\` instead.
  3 | mock.timers.enable({apis: ["setImmediate"]});

`;

exports[`no-mock-timers-destructured-import > invalid(17): import {test, mock} from 'node:test';\nimport {type clearTimeout, setTimeout} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {type clearTimeout, setTimeout} from 'node:timers';
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(17): import {test, mock} from 'node:test';\nimport {type clearTimeout, setTimeout} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {type clearTimeout, setTimeout} from 'node:timers';
    |                            ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(18): import {test, mock} from 'node:test';\nimport * as timers from 'node:timers';\nmock.timers.enable();\ntimers.setTimeout(fn, 1); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import * as timers from 'node:timers';
  3 | mock.timers.enable();
  4 | timers.setTimeout(fn, 1);

`;

exports[`no-mock-timers-destructured-import > invalid(18): import {test, mock} from 'node:test';\nimport * as timers from 'node:timers';\nmock.timers.enable();\ntimers.setTimeout(fn, 1); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import * as timers from 'node:timers';
    |        ^^^^^^^^^^^ \`timers\` is imported as a namespace, so it holds the real timer functions and \`mock.timers\` cannot intercept them. Call the global timer functions instead.
  3 | mock.timers.enable();
  4 | timers.setTimeout(fn, 1);

`;

exports[`no-mock-timers-destructured-import > invalid(19): import {test, mock} from 'node:test';\nimport * as timers from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]});\ntimers.setTimeout(fn, 1); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import * as timers from 'node:timers';
  3 | mock.timers.enable({apis: ["setTimeout"]});
  4 | timers.setTimeout(fn, 1);

`;

exports[`no-mock-timers-destructured-import > invalid(19): import {test, mock} from 'node:test';\nimport * as timers from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]});\ntimers.setTimeout(fn, 1); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import * as timers from 'node:timers';
    |        ^^^^^^^^^^^ \`timers\` is imported as a namespace, so it holds the real timer functions and \`mock.timers\` cannot intercept them. Call the global timer functions instead.
  3 | mock.timers.enable({apis: ["setTimeout"]});
  4 | timers.setTimeout(fn, 1);

`;

exports[`no-mock-timers-destructured-import > invalid(2): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(2): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(20): import {test, mock} from 'node:test';\nimport * as timers from 'node:timers';\nmock.timers.enable({apis: [\"Date\", \"setImmediate\"]});\ntimers.setImmediate(fn); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import * as timers from 'node:timers';
  3 | mock.timers.enable({apis: ["Date", "setImmediate"]});
  4 | timers.setImmediate(fn);

`;

exports[`no-mock-timers-destructured-import > invalid(20): import {test, mock} from 'node:test';\nimport * as timers from 'node:timers';\nmock.timers.enable({apis: [\"Date\", \"setImmediate\"]});\ntimers.setImmediate(fn); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import * as timers from 'node:timers';
    |        ^^^^^^^^^^^ \`timers\` is imported as a namespace, so it holds the real timer functions and \`mock.timers\` cannot intercept them. Call the global timer functions instead.
  3 | mock.timers.enable({apis: ["Date", "setImmediate"]});
  4 | timers.setImmediate(fn);

`;

exports[`no-mock-timers-destructured-import > invalid(21): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', (t: any) => { t.mock.timers.enable!({apis: ['setTimeout']}); setTimeout(f, 1); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', (t: any) => { t.mock.timers.enable!({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(21): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', (t: any) => { t.mock.timers.enable!({apis: ['setTimeout']}); setTimeout(f, 1); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', (t: any) => { t.mock.timers.enable!({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(22): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', (t: any) => { (t.mock.timers.enable as any)({apis: ['setTimeout']}); setTimeout(f, 1); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', (t: any) => { (t.mock.timers.enable as any)({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(22): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', (t: any) => { (t.mock.timers.enable as any)({apis: ['setTimeout']}); setTimeout(f, 1); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', (t: any) => { (t.mock.timers.enable as any)({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(23): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { mock.timers.enable({apis: undefined}); setTimeout(f, 1); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', () => { mock.timers.enable({apis: undefined}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(23): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { mock.timers.enable({apis: undefined}); setTimeout(f, 1); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', () => { mock.timers.enable({apis: undefined}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(24): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { mock.timers.enable({apis: null}); setTimeout(f, 1); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', () => { mock.timers.enable({apis: null}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(24): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { mock.timers.enable({apis: null}); setTimeout(f, 1); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', () => { mock.timers.enable({apis: null}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(25): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { mock.timers.enable({apis: void 0}); setTimeout(f, 1); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', () => { mock.timers.enable({apis: void 0}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(25): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { mock.timers.enable({apis: void 0}); setTimeout(f, 1); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', () => { mock.timers.enable({apis: void 0}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(26): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable(undefined); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | mock.timers.enable(undefined);

`;

exports[`no-mock-timers-destructured-import > invalid(26): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable(undefined); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable(undefined);

`;

exports[`no-mock-timers-destructured-import > invalid(27): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable(null); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | mock.timers.enable(null);

`;

exports[`no-mock-timers-destructured-import > invalid(27): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable(null); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable(null);

`;

exports[`no-mock-timers-destructured-import > invalid(28): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable(void 0); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | mock.timers.enable(void 0);

`;

exports[`no-mock-timers-destructured-import > invalid(28): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable(void 0); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable(void 0);

`;

exports[`no-mock-timers-destructured-import > invalid(29): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable({['now']: 1000}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | mock.timers.enable({['now']: 1000});

`;

exports[`no-mock-timers-destructured-import > invalid(29): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable({['now']: 1000}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable({['now']: 1000});

`;

exports[`no-mock-timers-destructured-import > invalid(3): import {test, mock} from 'node:test';\nimport {setTimeout, clearTimeout} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout, clearTimeout} from 'node:timers';
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(3): import {test, mock} from 'node:test';\nimport {setTimeout, clearTimeout} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout, clearTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(3): import {test, mock} from 'node:test';\nimport {setTimeout, clearTimeout} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 3`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout, clearTimeout} from 'node:timers';
    |                     ^^^^^^^^^^^^ \`clearTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`clearTimeout\` instead.
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(30): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { (mock.timers as any).enable({apis: ['setTimeout']}); setTimeout(f, 1); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', () => { (mock.timers as any).enable({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(30): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { (mock.timers as any).enable({apis: ['setTimeout']}); setTimeout(f, 1); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', () => { (mock.timers as any).enable({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(31): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', t => { (t.mock.timers as any).enable({apis: ['setTimeout']}); setTimeout(f, 1); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', t => { (t.mock.timers as any).enable({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(31): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', t => { (t.mock.timers as any).enable({apis: ['setTimeout']}); setTimeout(f, 1); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', t => { (t.mock.timers as any).enable({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(32): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { (mock!.timers).enable({apis: ['setTimeout']}); setTimeout(f, 1); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', () => { (mock!.timers).enable({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(32): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { (mock!.timers).enable({apis: ['setTimeout']}); setTimeout(f, 1); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', () => { (mock!.timers).enable({apis: ['setTimeout']}); setTimeout(f, 1); });

`;

exports[`no-mock-timers-destructured-import > invalid(4): import {test, mock} from 'node:test';\nimport {clearImmediate} from 'node:timers';\nmock.timers.enable({apis: [\"setImmediate\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {clearImmediate} from 'node:timers';
  3 | mock.timers.enable({apis: ["setImmediate"]});

`;

exports[`no-mock-timers-destructured-import > invalid(4): import {test, mock} from 'node:test';\nimport {clearImmediate} from 'node:timers';\nmock.timers.enable({apis: [\"setImmediate\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {clearImmediate} from 'node:timers';
    |         ^^^^^^^^^^^^^^ \`clearImmediate\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`clearImmediate\` instead.
  3 | mock.timers.enable({apis: ["setImmediate"]});

`;

exports[`no-mock-timers-destructured-import > invalid(5): import {test, mock} from 'node:test';\nimport {setTimeout, setInterval} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout, setInterval} from 'node:timers';
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(5): import {test, mock} from 'node:test';\nimport {setTimeout, setInterval} from 'node:timers';\nmock.timers.enable({apis: [\"setTimeout\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout, setInterval} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(6): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable({apis: []});\nmock.timers.enable({apis: [\"setTimeout\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | mock.timers.enable({apis: []});
  4 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(6): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\nmock.timers.enable({apis: []});\nmock.timers.enable({apis: [\"setTimeout\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable({apis: []});
  4 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`no-mock-timers-destructured-import > invalid(7): import {test, getTestContext} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { getTestContext().mock.timers.enable({apis: [\"setTimeout\"]}); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test('a', () => { getTestContext().mock.timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(7): import {test, getTestContext} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest('a', () => { getTestContext().mock.timers.enable({apis: [\"setTimeout\"]}); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test('a', () => { getTestContext().mock.timers.enable({apis: ["setTimeout"]}); });

`;

exports[`no-mock-timers-destructured-import > invalid(8): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable({apis: [\"setTimeout\"]}); }); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout} from 'node:timers';
  3 | test("a", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable({apis: ["setTimeout"]}); }); });

`;

exports[`no-mock-timers-destructured-import > invalid(8): import {test, mock} from 'node:test';\nimport {setTimeout} from 'node:timers';\ntest(\"a\", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable({apis: [\"setTimeout\"]}); }); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout} from 'node:timers';
    |         ^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | test("a", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable({apis: ["setTimeout"]}); }); });

`;

exports[`no-mock-timers-destructured-import > invalid(9): import {test, mock} from 'node:test';\nimport {setTimeout as delay} from 'node:timers';\nmock.timers.enable(); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers';
  3 | mock.timers.enable();

`;

exports[`no-mock-timers-destructured-import > invalid(9): import {test, mock} from 'node:test';\nimport {setTimeout as delay} from 'node:timers';\nmock.timers.enable(); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | import {setTimeout as delay} from 'node:timers';
    |         ^^^^^^^^^^^^^^^^^^^ \`setTimeout\` is imported directly, so \`mock.timers\` cannot intercept it. Call the global \`setTimeout\` instead.
  3 | mock.timers.enable();

`;
